<resources>
    <string name="app_name" translatable="false">File Seeker</string>
    <string name="ellipsis" translatable="false">…</string>
    <string name="case_sens">Case sensitivity</string>
    <string name="storage_err">Error accessing memory</string>
    <string name="searching">Search…</string>
    <string name="receiving">Receiving…</string>
    <string name="search_stopped">Search was stopped</string>
    <string name="search_stopping">Search is stopping</string>
    <string name="search_empty">Search returned no results</string>
    <string name="search_succeed">Search completed successfully</string>
    <string name="search_failed">Search ended with an error</string>
    <string name="search_for_content_result">Substrings: %d, files: %d, total files: %d</string>
    <string name="search_for_names_result">Files: %d, total files: %d</string>
    <string name="search_error">Error: %s</string>
    <string name="error">Error</string>
    <string name="wrong_value">Wrong value</string>
    <string name="wrong_intent">Wrong intent</string>
    <string name="nothing">Nothing found</string>
    <string name="warning">You have not selected any directory. The search will be made around the root section</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="stop">Stop</string>
    <string name="completed">Completed</string>
    <string name="sorting">Sorting</string>
    <string name="sorting_a_z">A-Z</string>
    <string name="sorting_z_a">Z-A</string>
    <string name="sorting_newest">Newest</string>
    <string name="sorting_oldest">Oldest</string>
    <string name="sorting_smallest">Smallest</string>
    <string name="sorting_largest">Largest</string>
    <string name="no_activity">You have no application able to open a file of this type</string>
    <string name="results">Your search returned %d results</string>
    <string name="find">Search…</string>
    <string name="search_in_the_content">Content search</string>
    <string name="pref_general">General</string>
    <string name="regex">Use regexp</string>
    <string name="multiline">\'Multiline\' flag</string>
    <string name="bad_ex">Incorrect regular expression</string>
    <string name="reset">Reset</string>
    <string name="no_checked">You didn\'t choose any directory!</string>
    <string name="theme">Theme</string>
    <string name="need_restart">Restart required</string>
    <string name="history">History</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied to the clipboard</string>
    <string name="dont_show_anymore">don\'t show anymore</string>
    <string name="remember_my_choice">remember my choice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="started">Started</string>
    <string name="stopping">Stopping</string>
    <string name="stopped">Stopped</string>
    <string name="options">Options</string>
    <string name="options_title">Options:</string>
    <string name="explorer">Files</string>
    <string name="replace">Replace</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_file">Share file</string>
    <string name="share_files">Share files</string>
    <string name="pref_orientation">Screen orientation</string>
    <string name="pref_theme">App theme</string>
    <string name="pref_deep_black">Deep black</string>
    <string name="pref_haptic_feedback">Haptic feedback</string>
    <string name="pref_max_depth">Max depth</string>
    <string name="pref_max_size">Max file size</string>
    <string name="max_size_sum">If search in the content</string>
    <string name="pref_exclude_dirs">Exclude directories</string>
    <string name="exclude_dirs_summary">From search results</string>
    <string name="pref_use_su">Use super user</string>
    <string name="preferences">Preferences</string>
    <string name="pref_about">About the App</string>
    <string name="look_github">GitHub repository</string>
    <string name="faq_4pda">FAQ / Discuss</string>
    <string name="test_field">Test text</string>
    <string name="try_find_this_text">Try to find this text</string>
    <string name="waiting_for_results">Waiting for the results…</string>
    <string name="no_access">No access</string>
    <string name="data_was_lost">Data was lost</string>
    <string name="search_completed">Search completed: %s</string>
    <string name="pref_special_characters">Special characters</string>
    <string name="search">Search</string>
    <string name="use_regular_expression">Regular expression</string>
    <string name="enable_replace">Replace the text</string>
    <string name="exit">Exit</string>
    <string name="click_back_to_exit">Click Back to close the App</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="slide_to">slide to {}</string>
    <string name="rename">Rename</string>
    <string name="open_with">Open with…</string>
    <string name="no_such_file">No such file</string>
    <string name="no_such_directory">No such directory</string>
    <string name="no_such_file_or_directory">No such file or directory</string>
    <string name="permission_denied">Permission denied</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown">unknown</string>
    <string name="unavailable">unavailable</string>
    <string name="a_lot_of_errors">A lot of errors</string>
    <string name="not_allowed">Not allowed</string>
    <string name="pref_export_import">Export / Import</string>
    <string name="export_btn">Export</string>
    <string name="import_btn">Import</string>
    <string name="successful">Successful</string>
    <string name="successful_with_restart">Successful. Restart the App process</string>
    <string name="more">More</string>
    <string name="access_to_storage_forbidden">Access to the storage is forbidden</string>
    <string name="allow">Allow</string>
    <string name="confirm">Confirm</string>
    <string name="root_photos">Photos</string>
    <string name="root_videos">Videos</string>
    <string name="root_camera">Camera</string>
    <string name="root_downloads">Down&#8203;loads</string>
    <string name="root_bluetooth" translatable="false">Blue&#8203;tooth</string>
    <string name="root_screenshots">Screen&#8203;shots</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="oops_not_working">Oops, not working yet</string>
    <string name="user_interface">Interface</string>
    <string name="pref_explorer_item">File / Directory</string>
    <string name="pref_joystick">ESC button settings</string>
    <string name="use_as">Use as…</string>
    <string name="create">Create</string>
    <string name="clone">Clone</string>
    <string name="copy_move">Copy/Move</string>
    <string name="create_file_or_dir">Create a new file or folder</string>
    <string name="create_file_dir">New file/folder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="owner">Owner</string>
    <string name="group">Group</string>
    <string name="size">Size</string>
    <string name="empty_check_box">Empty mark</string>
    <string name="item_explorer_details">Details</string>
    <string name="item_explorer_background">Alternating row background</string>
    <string name="create_new">Create new</string>
    <string name="create_a_new">Create a new</string>
    <string name="make_a_clone">Make a clone</string>
    <string name="a_name">Name</string>
    <string name="a_file">File</string>
    <string name="a_directory">Directory</string>
    <string name="inverse_glow">Inverse glow</string>
    <string name="haptic_effect">Haptic feedback</string>
    <string name="inverse_for_dark">Inverse for Dark theme</string>
    <string name="pref_category_debug">Debug</string>
    <string name="pref_leak_canary" translatable="false">Leak Canary</string>
    <string name="pref_color_scheme" translatable="false">Color scheme</string>
    <string name="root">Root</string>
    <string name="search_notification_name" translatable="false">Search notifications</string>
    <string name="result_notification_name" translatable="false">Search result notifications</string>
    <string name="receive_notification_name" translatable="false">File receiving notifications</string>
    <string name="copy_path">Copy path</string>
    <string name="pref_category_system">System</string>
    <string name="pref_embedded_toybox">Use embedded toybox</string>
    <string name="disclaimer_pick_files">Mark file(s) and\u00A0press\u00A0Confirm</string>
    <string name="disclaimer_choose_directory">Choose a folder to save the file(s) and\u00A0press\u00A0Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="got_it">Got it</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="update_available">Update is available</string>
    <string name="failed_check_updates">Failed to check for updates</string>
    <string name="update_loading">Update is loading now</string>
    <string name="update_installing">Update is installing now</string>
    <string name="update_installed">The update was successfully installed</string>
    <string name="is_up_to_date">App is up to date</string>
    <string name="update_downloaded">Update downloaded</string>
    <string name="update_ready">The update is ready to install</string>
    <string name="update_choice">Would you like to download the update in the background or right now?</string>
    <string name="update_in_background">In background</string>
    <string name="update_now">Now</string>
    <string name="check">Check</string>
    <string name="retry">Retry</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="install_succeeded">Install succeeded</string>
    <string name="launch">Launch</string>
    <string name="apk_info">Package: %s\nVersion: %s\nMin SDK: %s\nTarget SDK: %s\nCompile SDK: %s\nSignature: %s</string>
    <string name="update">Update</string>
    <string name="channel_name_updates">Updates</string>
    <string name="search_here">Search here:</string>
    <string name="by_default">Reset to defaults</string>
    <string name="dash" translatable="false">—</string>
    <string name="fix_android_12">Starting from Android 12, the search may be interrupted by the system, which will cause it to partially or fully restart</string>
    <string name="fetching">Fetching metadata…</string>
    <string name="and">\u0020and\u0020</string>
    <string name="nothing_was_deleted">Nothing was deleted</string>
    <string name="none">None</string>
    <string name="lite">Lite</string>
    <string name="twice">Double</string>
    <string name="heavy">Heavy</string>
    <string name="dev_ui_ux" translatable="false">Dev/UI/UX</string>
    <string name="ui" translatable="false">UI</string>
    <string name="yaroslav_nesterov">Yaroslav Nesterov</string>
    <string name="dmitrii_pavlov">Dmitrii Pavlov</string>
    <plurals name="x_dirs">
        <item quantity="zero">%d directories</item>
        <item quantity="one">%d directory</item>
        <item quantity="two">%d directories</item>
        <item quantity="few">%d directories</item>
        <item quantity="many">%d directories</item>
        <item quantity="other">%d directories</item>
    </plurals>
</resources>