<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="app.atomofiron.searchboxapp.MainActivity">
    <item
        android:id="@+id/menu_apk"
        tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/menu_install"
                android:title="@string/install"
                android:icon="@drawable/ic_download"
                />
            <item
                android:id="@+id/menu_launch"
                android:title="@string/launch"
                android:icon="@drawable/ic_play"
                />
        </menu>
    </item>
    <item
        android:id="@+id/menu_clone"
        android:title="@string/clone"
        android:icon="@drawable/ic_clone"
        />
    <item
        android:id="@+id/menu_create"
        android:title="@string/create_file_or_dir"
        android:icon="@drawable/ic_create"
        />
    <item
        android:id="@+id/menu_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_rename"
        />
    <item
        android:id="@+id/menu_open_with"
        android:title="@string/open_with"
        android:icon="@drawable/ic_open_with"
        />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        />
    <item
        android:id="@+id/menu_copy_path"
        android:title="@string/copy_path"
        android:icon="@drawable/ic_link"
        />
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_trashbox"
        app:showAsAction="always"
        />
</menu>
