<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <app.atomofiron.searchboxapp.custom.preference.AppUpdatePreference
        app:key="pref_app_update"
        />
    <app.atomofiron.searchboxapp.custom.preference.HapticSwitchPreference
        app:title="@string/pref_use_su"
        app:key="pref_use_su"
        app:defaultValue="false"
        app:icon="@drawable/ic_hash"
        app:widgetLayout="@layout/widget_switch"
        />
    <PreferenceCategory
        app:title="@string/user_interface">
        <app.atomofiron.searchboxapp.custom.preference.DropDownPreference
            app:title="@string/pref_theme"
            app:key="pref_app_theme"
            app:entries="@array/theme_var"
            app:entryValues="@array/theme_val"
            app:icon="@drawable/ic_theme"
            />
        <app.atomofiron.searchboxapp.custom.preference.HapticSwitchPreference
            app:title="@string/pref_deep_black"
            app:key="pref_deep_black"
            app:defaultValue="false"
            app:widgetLayout="@layout/widget_switch"
            />
        <app.atomofiron.searchboxapp.custom.preference.DropDownPreference
            app:title="@string/pref_orientation"
            app:key="pref_app_orientation"
            app:entries="@array/orientation_var"
            app:entryValues="@array/orientation_val"
            app:icon="@drawable/ic_screen_rotation"
            />
        <app.atomofiron.searchboxapp.custom.preference.HapticSwitchPreference
            app:title="@string/pref_haptic_feedback"
            app:key="pref_haptic_feedback"
            app:defaultValue="true"
            app:widgetLayout="@layout/widget_switch"
            />
        <Preference
            app:title="@string/pref_explorer_item"
            app:key="pref_explorer_item"
            app:icon="@drawable/ic_folder"
            />
        <Preference
            app:title="@string/pref_joystick"
            app:key="pref_joystick"
            app:icon="@drawable/ic_esc_circle"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_category_system"
        app:title="@string/pref_category_system">
        <Preference
            app:title="@string/pref_export_import"
            app:key="pref_export_import"
            app:icon="@drawable/ic_export_import"
            app:isPreferenceVisible="false"
            />
        <app.atomofiron.searchboxapp.custom.preference.HapticSwitchPreference
            app:title="@string/pref_embedded_toybox"
            app:key="pref_toybox_path"
            app:icon="@drawable/ic_shell"
            app:widgetLayout="@layout/widget_switch"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_category_debug"
        app:title="@string/pref_category_debug">
        <app.atomofiron.searchboxapp.custom.preference.HapticSwitchPreference
            app:title="@string/pref_leak_canary"
            app:key="pref_leak_canary"
            app:widgetLayout="@layout/widget_switch"
            />
        <Preference
            app:title="@string/pref_color_scheme"
            app:key="pref_color_scheme"
            />
    </PreferenceCategory>
</PreferenceScreen>