<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.atomofiron.searchboxapp.MainActivity">
    <item
        android:id="@+id/menu_clone"
        android:title="@string/clone"
        android:icon="@drawable/ic_clone"
        />
    <item
        android:id="@+id/menu_create"
        android:title="@string/create_file_or_dir"
        android:icon="@drawable/ic_create"
        />
    <item
        android:id="@+id/menu_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_rename"
        />
    <item
        android:id="@+id/menu_open_with"
        android:title="@string/open_with"
        android:icon="@drawable/ic_open_with"
        />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        />
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_trashbox"
        >
        <menu />
    </item>
</menu>
