<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.atomofiron.searchboxapp.MainActivity">
    <item
        android:id="@+id/menu_stop"
        android:title="@string/stop"
        android:icon="@drawable/ic_circle_stop"
        />
    <item
        android:id="@+id/menu_sorting"
        android:title="@string/sorting"
        android:icon="@drawable/ic_sort_az_asc"
        />
    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false"
        />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        android:enabled="false"
        />
    <item
        android:id="@+id/menu_export"
        android:title="@string/export_btn"
        android:icon="@drawable/ic_document_send"
        android:enabled="false"
        />
</menu>
