<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/preference_explorer_item"
        layout="@layout/item_explorer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:flexWrap="wrap"
        app:flexDirection="row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_explorer_item"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/date"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/time"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="drwxrwx---"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/owner"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/group"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/item_explorer_details"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/size"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/empty_check_box"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/preference_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/item_explorer_background"
            />
    </com.google.android.flexbox.FlexboxLayout>
</androidx.constraintlayout.widget.ConstraintLayout>