<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/header"
        layout="@layout/layout_curtain_header"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_common"
        android:layout_marginHorizontal="@dimen/padding_common"
        android:hint="@string/a_name"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >
        <app.atomofiron.searchboxapp.custom.view.TextField
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="@dimen/padding_common"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/explorer_create_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/padding_common"
            android:text="@string/a_file"
            app:cornerRadius="@dimen/infinity"
            style="@style/Widget.Material3.Button.OutlinedButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/explorer_create_dir_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/padding_common"
            android:text="@string/a_directory"
            app:cornerRadius="@dimen/infinity"
            />
    </LinearLayout>
</LinearLayout>