<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_common"
    android:clipToPadding="false"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/padding_half"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/dev"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_common"
            android:text="@string/app_name"
            android:fontFamily="monospace"
            android:textSize="24sp"
            android:textColor="?colorSecondary"
            app:layout_constraintTop_toTopOf="@id/icon"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintBottom_toTopOf="@id/version"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/version_name"
            android:textColor="?colorSecondary"
            android:layout_marginBottom="@dimen/padding_half"
            android:drawableStart="@drawable/ic_info"
            android:gravity="center_vertical"
            android:drawablePadding="4dp"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintStart_toStartOf="@id/app_name"
            app:layout_constraintBottom_toBottomOf="@id/icon"
            />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            />

        <TextView
            android:id="@+id/dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_common"
            android:gravity="center_horizontal"
            android:fontFamily="monospace"
            android:paddingTop="@dimen/padding_half"
            android:text="@string/dev_ui_ux"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintEnd_toStartOf="@id/yaroslav"
            app:layout_constraintHorizontal_chainStyle="packed"
            />
        <TextView
            android:id="@+id/yaroslav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_common"
            android:gravity="center_horizontal"
            android:fontFamily="monospace"
            android:text="@string/yaroslav_nesterov"
            app:layout_constraintStart_toEndOf="@id/dev"
            app:layout_constraintBottom_toBottomOf="@+id/dev"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_common"
            android:fontFamily="monospace"
            android:paddingBottom="@dimen/padding_half"
            android:text="@string/ui"
            app:layout_constraintStart_toStartOf="@+id/dev"
            app:layout_constraintTop_toBottomOf="@id/dev"
            app:layout_constraintEnd_toEndOf="@id/dev"
            />
        <TextView
            android:id="@+id/dmitrii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/dmitrii_pavlov"
            app:layout_constraintStart_toStartOf="@id/yaroslav"
            app:layout_constraintTop_toTopOf="@id/ui"
            />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_common"
            android:background="@drawable/bg_toned_ripple"
            android:ellipsize="end"
            android:lines="1"
            android:padding="@dimen/padding_semi"
            android:drawablePadding="@dimen/padding_semi"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="?colorSecondary"
            android:drawableStart="@drawable/logo_github"
            android:drawableEnd="@drawable/ic_outside"
            android:drawableTint="?colorContent"
            android:text="@string/look_github"
            android:paddingEnd="@dimen/padding_semi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ui"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forpda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_common"
            android:background="@drawable/bg_toned_ripple"
            android:ellipsize="end"
            android:lines="1"
            android:padding="@dimen/padding_semi"
            android:drawablePadding="@dimen/padding_semi"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="?colorSecondary"
            android:drawableStart="@drawable/logo_forpda"
            android:drawableEnd="@drawable/ic_outside"
            android:drawableTint="?colorContent"
            android:text="@string/faq_4pda"
            android:paddingEnd="@dimen/padding_semi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/github"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>